Bug 43408 - [bisected ironlake] olgc fbo_db_ARBfp(basic.OnlyDepthBuffDrawBufferRender) fails
Summary: [bisected ironlake] olgc fbo_db_ARBfp(basic.OnlyDepthBuffDrawBufferRender) fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high normal
Assignee: Chad Versace
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 42993
  Show dependency treegraph
 
Reported: 2011-12-01 01:24 UTC by fangxun
Modified: 2012-01-30 23:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2011-12-01 01:24:28 UTC
System Environment:
--------------------------
Arch:           x86_64
Platform:       piketon
Libdrm:         (master)2.4.27-3-g37ccce5e390a9d757474920f488cafa1cf89854a
Mesa:           (master)2134d2f35baadf4117e48aa3315608403622b79a
Xserver:
(master)xorg-server-1.11.99.1-43-gb2015a2c01711646bb7ae23d684abee0cd55d4d0
Xf86_video_intel:  (master)2.17.0-41-gd8f2e87473eae81e07922271b5f608fdceb4ae5e
Kernel:  (drm-intel-next)9a10f401a401ca69c6537641c8fc0d6b57b5aee8

Bug detailed description:
------------------------- 
It fails on piketon and calpella. oglc fbo_db_ARBfp(basic.OnlyDepthBuffDrawBuffersRender) also fails. 
Bisect shows d84a180417d1eabd680554970f1eaaa93abcd41e is the first bad commit.
commit d84a180417d1eabd680554970f1eaaa93abcd41e
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Thu Nov 17 14:45:54 2011 -0800
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Tue Nov 29 16:44:51 2011 -0800

    i965: Base HW depth format setup based on MESA_FORMAT, not bpp.

    This will make handling new formats (like actually exposing Z32F)
    easier and more reliable.

    v2: Remove the check for hiz buffer -- the MESA_FORMAT should really
        be giving us the value we want even for hiz.

    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Reproduce steps:
----------------
1. start X
2. ./oglconform -z -s -suite all -v 2 -D 128 -test fbo_db_ARBfp basic.OnlyDepthBuffDrawBufferRender
Comment 1 fangxun 2011-12-04 22:53:02 UTC
NOTE: oglc depth-stencil(misc.state_on.depth_int) also fails on ironlake.
Comment 2 Gordon Jin 2011-12-19 23:37:17 UTC
Eric, comments?
Comment 3 Chad Versace 2012-01-17 11:23:36 UTC
Mark bug as ASSIGNED. I just began working on it.
Comment 4 Chad Versace 2012-01-18 13:38:12 UTC
Mark RESOLVED/FIXED.

Fixed by:

commit a6dd4bf5fcce2520ab199201fdd1ad155457d781
Author: Chad Versace <chad.versace@linux.intel.com>
Date:   Tue Jan 17 15:41:46 2012 -0800

    i965/gen5: Fix rendering of depth buffers without stencil [v2]
Comment 5 Ouping Zhang 2012-01-30 23:57:38 UTC
System Environment:
--------------------------
Arch:           x86_64
Platform:       piketon
Libdrm:         (master)2.4.30-18-gb643b0713aefdc0611e47654e88263b53b0de6f5
Mesa:           (8.0)caebd7929dca802ece8ef36b0f85094d66133b57
Xserver:                (server-1.11-branch)xorg-server-1.11.3
Xf86_video_intel:               (master)2.17.0-599-gca252e5b51d7b2f5a7b2c2e0d8fdb024b08096db

verify with mesa 8.0 branch, this case passed.

(In reply to comment #4)
> Mark RESOLVED/FIXED.
> Fixed by:
> commit a6dd4bf5fcce2520ab199201fdd1ad155457d781
> Author: Chad Versace <chad.versace@linux.intel.com>
> Date:   Tue Jan 17 15:41:46 2012 -0800
>     i965/gen5: Fix rendering of depth buffers without stencil [v2]


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.